list style update

--- a/style.css
+++ b/style.css
@@ -44,15 +44,23 @@
 
     }
     .SkillList{
+      list-style-type: disc;
       font-family: 'Chakra Petch', sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      color:#7df4fc
+      color:#7df4fc;
       padding: 5px;
       color:#ccebf8;
     
     }
 
-    
+  .SkillList ul{
+    text-align: center;
+    border-style:dashed;
+    border-radius: 50px;
+    padding: 50px;
+    border-color:#0aff70;
+
+  }
 
