--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     img{
       float: right;
       width: 325px;
-      height: 400px;
+      height: 500px;
       margin: 50px 50px 50px 50px;
       border: solid #98D2EB 5px ;
       border-radius: 50px;
@@ -73,5 +73,39 @@
     text-align: left;
     font-family: 'Chakra Petch', sans-serif;
     color:#7df4fc;
+  }
+
+  .Combat_Scene_ScreenShot img{
+    float: right;
+    width: 450px;
+    height: 200px;
+    margin: 10px 10px 10px 10px;
+    border: solid #98D2EB 5px ;
+    border-radius: 10px;
+  }
+
+  .Dialogue_Widget_Screenshot img{
+    float: right;
+    width: 300px;
+    height: 200px;
+    margin: 10px 10px 10px 10px;
+    border: solid #98D2EB 5px ;
+    border-radius: 10px;
+  }
+
+  .Fearosis{
+    text-align: right;
+    font-family: 'Chakra Petch', sans-serif;
+    color:#7df4fc;
+  }
+
+  .MapScreenshot img{
+    float: left;
+    width: 300px;
+    height: 200px;
+    margin: 10px 10px 10px 10px;
+    border: solid #98D2EB 5px ;
+    border-radius: 10px;
+  }
   }
 
