Trying to fix images

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
     border: solid #98D2EB 5px ;
     border-radius: 10px;
   }
-  .upgrades_ScreenShot img{
+  .Upgrades_ScreenShot img{
     float: left;
     width: 350px;
     height: 200px;
@@ -118,8 +118,8 @@
 
   .Upgrade_Descriptions_Screenshot img{
     float: left;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     margin: 10px 10px 10px 10px;
     border: solid #98D2EB 5px ;
     border-radius: 10px;
