class updated trying to fix

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@
     border-radius: 10px;
   }
 
-  .Upgrade_Descriptions_Screenshot img{
+  .Descriptions_Screenshot img{
     float: left;
     width: 200px;
     height: 200px;
