--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
 
   .MapScreenshot img{
     float: left;
+    justify: left;
     width: 400px;
     height: 250px;
     margin: 10px 10px 10px 10px;
@@ -111,6 +112,7 @@
   }
   .UpgradesScreenShot img{
     float: left;
+    justify: left;
     width: 400px;
     height: 250px;
     margin: 10px 10px 10px 10px;
@@ -120,10 +122,22 @@
 
   .DescriptionsScreenshot img{
     float: left;
+    justify: left;
     width: 300px;
     height: 300px;
     margin: 10px 10px 10px 10px;
     border: solid #98D2EB 5px ;
     border-radius: 10px;
   }
+  
+  .Jamsepticeye {
+    text-align: left;
+    font-family: 'Chakra Petch', sans-serif;
+    color:#7df4fc;
+  }
 
+  .Creature_Carnival {
+    text-align: right;
+    font-family: 'Chakra Petch', sans-serif;
+    color:#7df4fc;
+  }
