--- a/style.css
+++ b/style.css
@@ -104,8 +104,8 @@
   }
 
   .MapScreenshot img{
-    float: right;
-    justify: right;
+    float: center;
+    justify: center;
     width: 400px;
     height: 250px;
     margin: 10px 10px 10px 10px;
@@ -113,8 +113,8 @@
     border-radius: 10px;
   }
   .UpgradesScreenShot img{
-    float: right;
-    justify: right;
+    float: center;
+    justify: center;
     width: 400px;
     height: 250px;
     margin: 10px 10px 10px 10px;
@@ -123,8 +123,8 @@
   }
 
   .DescriptionsScreenshot img{
-    float: right;
-    justify: right;
+    float: center;
+    justify: center;
     width: 300px;
     height: 300px;
     margin: 10px 10px 10px 10px;
@@ -139,7 +139,7 @@
   }
 
   .Creature_Carnival {
-    text-align: right;
+    text-align: left;
     font-family: 'Chakra Petch', sans-serif;
     color:#7df4fc;
   }
