New Images Added

--- a/style.css
+++ b/style.css
@@ -178,3 +178,22 @@
     border: solid #98D2EB 5px ;
     border-radius: 10px;
   }
+
+  .CreatureCircusIngame img{
+    justify-content: center;
+    width: 400px;
+    height: 250px;
+    margin: 10px 10px 10px 10px;
+    border: solid #98D2EB 5px ;
+    border-radius: 10px;
+   }
+
+   .MonkeyLevelEditor img{
+    justify-content: center;
+    width: 400px;
+    height: 250px;
+    margin: 10px 10px 10px 10px;
+    border: solid #98D2EB 5px ;
+    border-radius: 10px;
+   }
+  }
